@@ -6,6 +6,9 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 -----------------+-----------+--------------------------------------------------
+CR-2009-09-30-0: Enhancem.:  added to features to tcl_files/file_procedures.tcl
+                 Review:     JG
+
 RH-2009-09-30-0: Enhancem.:  wait_for_remote_dir and wait_for_remote_file
                              uses external script to wait for files or 
                              directories
